Fix jumping gallery images.

--- a/jsth/static/css/index.css
+++ b/jsth/static/css/index.css
@@ -1,5 +1,24 @@
+/* RESPONSIVE FONT SIZES */
+@media (min-width: 0) {
+    #home-heading h1 { font-size: 2.2em; }
+    #home-heading h4 { font-size: 1.4em; }
+  }
+
+  @media (min-width: 576px) {
+    #home-heading h1 { font-size: 2.4em; }
+    #home-heading h4 { font-size: 1.4em; }
+  }
+
+  @media (min-width: 768px) {
+    #home-heading h1 { font-size: 2.6em; }
+    #home-heading h4 { font-size: 1.4em; }
+  }
+
+header {
+    display: none;
+}
+
 h1 {
-    text-transform: capitalize;
     color: #292E33;
 }
 
